Only clear tooltip message on a user scroll or compositor scroll.

This behavior isn't well defined, but it seems reasonable that the
tooltip should only be dismissed by a user-initiated scroll.

BUG=677252
R=tdresser@chromium.org,skobes@chromium.org
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2603063002
Cr-Commit-Position: refs/heads/master@{#441544}

Former-commit-id: e80f3cb67769187ddc37c8867648cae883de47b3