third_party/WebKit/Source/core/frame/FrameViewTest.cpp
@@ -119,6 +119,13 @@ TEST_P(FrameViewTest, HideTooltipWhenScrollPositionChanges) {
   EXPECT_CALL(chromeClient(), mockSetToolTip(document().frame(), String(), _));
   document().view()->layoutViewportScrollableArea()->setScrollOffset(
       ScrollOffset(1, 1), UserScroll);
+
+  // Programmatic scrolling should not dismiss the tooltip, so setToolTip
+  // should not be called for this invocation.
+  EXPECT_CALL(chromeClient(), mockSetToolTip(document().frame(), String(), _))
+      .Times(0);
+  document().view()->layoutViewportScrollableArea()->setScrollOffset(
+      ScrollOffset(2, 2), ProgrammaticScroll);
 }
 
 // NoOverflowInIncrementVisuallyNonEmptyPixelCount tests fail if the number of
